--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".RecyclerViewActivity" />
         <activity android:name=".DataActivity" />
         <activity android:name=".ThreadActivity" />
+        <activity android:name=".mvp.ViewMVP" />
 
     </application>
 
