--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,18 @@ dependencies {
     implementation "com.squareup.picasso:picasso:2.4.0"
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    implementation 'io.reactivex:rxjava:1.2.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 }
