--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
         <activity android:name=".fragments.FragmentReplaceActivity" />
         <activity android:name=".fragments.FragmentPagerActivity" />
         <activity android:name=".fragments.MyFragmentActivity" />
+        <activity android:name=".activities.FirstActivity"/>
+        <activity android:name=".activities.SecondActivity"/>
+        <activity android:name=".activities.ThirdActivity"/>
         <activity android:name=".mvvm.ViewMVVM" />
 
     </application>
