Add CycleTest class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,16 +22,22 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
+        </activity>
+
+
+        <activity android:name=".RecyclerViewActivity" />
+        
+        <activity
+            android:name=".DataActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-
-
-        <activity android:name=".RecyclerViewActivity" />
-        <activity android:name=".DataActivity" />
         <activity android:name=".ThreadActivity" />
         <activity android:name=".activities.NextActivity" />
         <activity android:name=".mvp.ViewMVP" />
